@startuml
'https://plantuml.com/class-diagram

interface PropFactory{
    + createProp(int locationX, int locationY, int speedX, int speedY):BaseProp
}
class BloodPropFactory{
    + createProp(int locationX, int locationY, int speedX, int speedY):BaseProp
}
class BombPropFactory{
    + createProp(int locationX, int locationY, int speedX, int speedY):BaseProp
}
class BulletPropFactory{
    + createProp(int locationX, int locationY, int speedX, int speedY):BaseProp
}
PropFactory <|.. BloodPropFactory
PropFactory <|.. BombPropFactory
PropFactory <|.. BulletPropFactory


abstract class BaseProp
{
    + BaseProp(int locationX, int locationY, int speedX, int speedY)
    + BaseProp()
    + forward():void
}

class BloodProp {
    - blood:int
    + BloodProp(int locationX, int locationY,int speedX, int speedY)
    + getBlood():int
}
class BombProp {
    - power:int
    + BombProp(int locationX, int locationY,int speedX, int speedY)
    + getPower():int
}
class BulletProp {
    + BulletProp(int locationX, int locationY,int speedX, int speedY)
}


BaseProp <|-- BloodProp
BaseProp <|-- BombProp
BaseProp <|-- BulletProp


BaseProp <.. PropFactory


@enduml